--- a/local/css/main.css
+++ b/local/css/main.css
@@ -1,4 +1,13 @@
-body{
-
+html,body{
+	height: 100%;
   
+}
+
+
+.container{
+
+	background-image: url('../images/mar.jpeg');
+	width: 100%;
+	height: 100%;
+	background-size: cover;
 }
