--- a/local/css/main.css
+++ b/local/css/main.css
@@ -3,11 +3,29 @@ html,body{
   
 }
 
-
+.alert{
+	margin-top: 20px;
+	display: none;
+}
 .container{
 
 	background-image: url('../images/mar.jpeg');
 	width: 100%;
 	height: 100%;
 	background-size: cover;
+	padding-top: 150px;
+}
+
+.white{
+	color:white;
+}
+.center{
+	text-align: center;
+}
+p{
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+button{
+	margin-top: 20px;
 }
